# devEnvLite

./: .commitlintrc.cjs  .env  .gitignore  .release-it.cjs  CHANGELOG.md  README.md  auto-imports.d.ts  biome.jsonc  components.d.ts  components.json  components1.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js  splashscreen.html  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/DISCUSSION_TEMPLATE/: community.md  general_feedback.md  product.md  qa.md  technical.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  other.yml
.github/workflows/: release.yml
.tauri/: devEnvLite.key  devEnvLite.key.pub
.volta/: hooks.json
src/: App.vue  Splashscreen.vue  main.ts  splashscreen.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  db.sql  db.sqlite  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migration/: db.sqlite
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: command-backup.rs  command.rs  db.rs  error.rs  lib.rs  main.rs
src-tauri/src/command/: env_config.rs  environment_variable.rs  mod.rs  os_enviroment_variable.rs  os_environment_variable.rs  settings.rs  variable_group.rs
src-tauri/src/core/: tray.rs
src-tauri/src/entity/: env_config.rs  environment_variable.rs  mod.rs  prelude.rs  variable_group.rs  variable_group_mapping.rs
src-tauri/src/environment_vars/: linux.rs  mod.rs  windows.rs
src-tauri/src/model/: config.rs  env.rs  env_config.rs  environment_variable.rs  group.rs  mod.rs  settings.rs  variable_group.rs
src-tauri/src/service/: mod.rs  mutations.rs  queries.rs  transactions.rs
src-tauri/tauri-plugin-theme/: Cargo.toml
src-tauri/tauri-plugin-theme/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-theme/permissions/schemas/: schema.json
src-tauri/tauri-plugin-theme/src/: lib.rs
src-tauri/tauri-plugin-theme/src/platform/: linux.rs  windows.rs
src-tauri/tests/: transactions.rs
src/components/: Config.vue  Footer.vue  GroupEnv.vue  Header.vue  Setting.vue
src/components/Config/: EditConfig.vue  NewConfig.vue
src/components/Modal/: index.vue
src/components/Toast/: index.ts  index.vue
src/components/common/: ComponentError.vue  ListCheckbox.vue  LocalFileInput.vue  ThemeChange.vue  index.ts
src/components/config/: ApplyConfigDialog.vue  EditPopover.vue  ImportDialog.vue  index.ts
src/components/envs/: EditEnvironmentVariable.vue  EditGroupEnv.vue  EditItemEnv.vue  EditVariableGroup.vue  EnvironmentVariable.vue  GroupEnv.vue  ItemEnv.vue  VariableGroup.vue  index.ts
src/components/footer/: AppVersion.vue  index.ts  index.vue
src/components/header/: About.vue  Backup.vue  BackupDialog.vue  Collate.vue  CollateDialog.vue  Recover.vue  RecoverDialog.vue  index.ts  index.vue
src/components/setting/: SettingModal.vue  index.ts  index.vue
src/components/ui/badge/: Badge.vue  index.ts
src/components/ui/button/: Button.vue
src/components/ui/card/: Card.vue  CardAction.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
src/components/ui/checkbox/: Checkbox.vue  ListCheckbox.vue  index.ts
src/components/ui/command/: Command.vue  CommandDialog.vue  CommandEmpty.vue  CommandGroup.vue  CommandInput.vue  CommandItem.vue  CommandList.vue  CommandSeparator.vue  CommandShortcut.vue
src/components/ui/context-menu/: ContextMenuCheckboxItem.vue  ContextMenuContent.vue  ContextMenuGroup.vue  ContextMenuItem.vue  ContextMenuLabel.vue  ContextMenuPortal.vue  ContextMenuRadioGroup.vue  ContextMenuRadioItem.vue  ContextMenuSeparator.vue  ContextMenuShortcut.vue  ContextMenuSub.vue  ContextMenuSubContent.vue  ContextMenuSubTrigger.vue  ContextMenuTrigger.vue
src/components/ui/dialog/: DialogContent.vue  DialogOverlay.vue  DialogScrollContent.vue
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  DropdownMenuRadioItem.vue  DropdownMenuSeparator.vue  DropdownMenuShortcut.vue  DropdownMenuSubContent.vue  DropdownMenuSubTrigger.vue  DropdownMenuTrigger.vue
src/components/ui/form/: FormDescription.vue  FormItem.vue  FormMessage.vue  useFormField.ts
src/components/ui/hover-card/: HoverCard.vue  HoverCardContent.vue
src/components/ui/input/: Input.vue
src/components/ui/label/: Label.vue
src/components/ui/popover/: PopoverContent.vue
src/components/ui/progress/: Progress.vue
src/components/ui/radio-group/: RadioGroup.vue  RadioGroupItem.vue
src/components/ui/resizable/: ResizableHandle.vue  ResizablePanel.vue  ResizablePanelGroup.vue
src/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
src/components/ui/select/: SelectContent.vue  SelectItem.vue  SelectLabel.vue  (+4 more)
src/composable/: dialog.ts
src/constants/: index.ts
src/locales/: en-US.yml  en.yml  index.ts  zh-CN.yml  zh.yml
src/router/: index.ts
src/store/: activeConfig.ts  config.ts  index.ts  setting.ts  type.ts
src/styles/: index.css  main.css  show-colors.css  splashscreen.css
src/types/: defaultValue.ts  index.ts
src/utils/: ValidateUtil.ts  Webview.ts  env.ts
src/views/: Config.vue  Error.vue  Footer.vue  GroupEnv.vue  Header.vue  Home.vue  MainContent.vue  Setting.vue  Splashscreen.vue
src/views/Config/: EditConfig.vue
src/views/about/: index.vue
src/views/config/: EditConfigModal.vue  index.vue
src/views/environment/: index.vue
src/views/groupenv/: EditEnvModal.vue  EditGroupEnvModal.vue  index.vue
src/views/setting/: SettingModal.vue
(+8 files in other folders)
