[package]
name = "devenvlite"
version = "0.0.0"
description = "一个环境变量管理和配置工具。 A lightweight tool for managing and configuring environment variables. "
authors = ["ddki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["devtools", "config-json5"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-clipboard-manager = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "^0.4"
thiserror = "1.0.69"
anyhow = "1.0.98"
lombok = "0.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
cargo-edit = "0.12.3"
rustfmt = "0.10.0"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52.0", features = ["transactions"] }
