[package]
name = "devenvlite"
version = "0.1.2"
description = "一个环境变量管理和配置工具。 A lightweight tool for managing and configuring environment variables. "
authors = ["ddki"]
edition = "2021"

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [
  "devtools",
  "config-json5",
  "tray-icon",
] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-opener = "2"
tauri-plugin-os = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "^0.4"
thiserror = "2.0.12"
anyhow = "1.0.98"
lombok = "0.4.0"
ulid = "1.2.1"
dotenvy = "0.15.7"
migration = { version = "0.1.0", path = "migration" }
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
tauri-plugin-notification = { version = "2", features = ["windows7-compat"] }
tauri-plugin-devtools = "2.0.0"
futures = "0.3.31"
chrono = "0.4.41"
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["json"] }

[dependencies.sea-orm]
version = "1.1.13"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-sqlite"]

[workspace]
members = [".", "migration"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
cargo-edit = "0.13.6"
rustfmt = "0.10.0"
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55.0", features = ["transactions"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.0"
tauri-plugin-window-state = "2.3.0"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
